--- a/orderio/templates/account/user_list.html
+++ b/orderio/templates/account/user_list.html
@@ -1,13 +1,39 @@
 
-
-{% for user in users %}
-{{user.username}}
-{{user.role}}
-{{user.employee.daily_allowance}}
-{{user.employee.weekly_allowance}}
-<a href="{% url 'update_user' user.id %}">Update</a> 
-<a href="{% url 'delete_user' user.id %}">Delete</a> 
-<br>
+{% for message in messages %}
+<div class="alert alert-{{message.level_tag}}  alert-dismissible fade show">
+    {{message}}
+    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+</div>
+{% endfor %}
+<table>
+    <thead>
+        <tr>
+            <th>Username</th>
+            <th>Role</th>
+            <th>Daily Allowance</th>
+            <th>Action</th>
+        </tr>
+    </thead>
+    <tbody>
+        {% for user in users %}
+<tr>
+<td>{{user.username}}</td>
+<td>{{user.role}}</td>
+{% if user.role.name == "user" %}
+  <td><form method="post" action="{% url 'employee:change_daily_allowance' user.employee.pk %}">
+      {% csrf_token %}
+      <input type="number" name="daily_allowance" value="{{user.employee.daily_allowance}}">
+      <input type="submit">
+  </form>
+</td>
+{% else %}
+<td>-</td>
+{% endif %}
+<td><a href="{% url 'delete_user' user.id %}">Delete</a> </td>
+</tr>
 {% endfor %}
 
   
+
+    </tbody>
+</table>
