--- a/orderio/templates/employee/index.html
+++ b/orderio/templates/employee/index.html
@@ -7,7 +7,10 @@
     <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
 </div>
 {% endfor %}
+<a href="{% url 'employee:daily_menu' %}">Today's menu</a> <br>
 <a href="{% url 'menu:view_weekly_menu' week %}">This weeks menu</a> <br>
+<a href="{% url 'order:user_order_history' %}">Order History</a> <br>
+<a href="{% url 'employee:employee_profile' %}">View Profile</a> <br>
 
 Your daily allowance is : {{request.user.employee.daily_allowance}}<br>
 Budget available: {{budget_available}}
