--- a/orderio/templates/manager/index.html
+++ b/orderio/templates/manager/index.html
@@ -10,10 +10,10 @@
 <a href="{% url 'meal:index' %}" class="btn btn-primary">Meals</a> 
 <a href="{% url 'create_user' %}" class="btn btn-primary">Create user</a> 
 <a href="{% url 'menu:weekly_menu' %}" class="btn btn-primary">This week's Menu</a>
-<a href="{% url 'menu:all_weekly_menus' %}" class="btn btn-primary">Weekly menu History</a>
+
 <a href="{% url 'order:daily_orders' %}" class="btn btn-primary">Daily Orders</a>
 <a href="{% url 'meal:create_meal' %}" class="btn btn-primary">Create meal</a>
-<a href="" class="btn btn-primary">Reports</a>
+<a href="{% url 'manager:reports_index' %}" class="btn btn-primary">Reports</a>
 <a href="{% url 'user_list' %}" class="btn btn-primary">User List</a>
 <a href="{% url 'change_password' %}" class="btn btn-primary">Change Password</a>
 {% endblock%}
