--- a/orderio/templates/employee/view_weekly_menu.html
+++ b/orderio/templates/employee/view_weekly_menu.html
@@ -2,11 +2,7 @@
 {% for menu in wm.menu_set.all %}
 
 <li>
-    {% for day in menu.DAYS %}
-        {% if day.0 == menu.created_for %}
-            {{day.1}}
-        {% endif %}
-    {% endfor %}
+    {{menu.get_day_name}}
     <a href="{{menu.get_absolute_url}}">View</a>
     
 </li> 
