--- a/orderio/templates/order/view_order.html
+++ b/orderio/templates/order/view_order.html
@@ -6,11 +6,7 @@ Meals:
 {% endfor %}
 </ol>
 Weekly menu: {{order.menu.weekly_menu.week}}<br>
-{% for day in order.menu.DAYS %}
-{% if day.0 == order.menu.created_for %}
-  Menu for: {{day.1}}
-{% endif %}
-{% endfor %}<br>
+Menu for: {{menu.get_day_name}}
 Created at: {{order.created_at}}<br>
 Order status: {{order.order_status}}<br>
 Created by: {{order.employee.user.username}}
