--- a/orderio/templates/account/login.html
+++ b/orderio/templates/account/login.html
@@ -23,7 +23,7 @@
             rel="stylesheet">
       
         <!-- Custom styles for this template-->
-        <link href="{% static 'css/manager-base.css' %}" rel="stylesheet">
+        <link href="{% static 'css/main-template.css' %}" rel="stylesheet">
         <!-- icons -->
         <link href="{% static 'plugins/fontawesome-free/css/all.min.css' %}" rel="stylesheet" type="text/css">
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.2/font/bootstrap-icons.css">
@@ -98,7 +98,7 @@
     <script src="{% static 'plugins/jquery-easing/jquery.easing.min.js' %}"></script>
 
     <!-- Custom scripts for all pages-->
-    <script src="{% static 'js/manager-base.min.js' %}"></script>
+    <script src="{% static 'js/main-template.min.js' %}"></script>
 
 
 </body>
