--- a/orderio/templates/account/user_list.html
+++ b/orderio/templates/account/user_list.html
@@ -2,10 +2,11 @@
 {% load static %}
 {% block content %}
 {% for message in messages %}
-<div class="alert alert-{{message.level_tag}}  alert-dismissible fade show">
+
+<div class="alert alert-{{message.level_tag}} alert-dismissible fade show" role="alert">
     {{message}}
-    <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
-</div>
+    <small><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></small>
+  </div>
 {% endfor %}
 
     <div class="input-group m-1 d-flex justify-content-end" style="width: 30%;">
