--- a/orderio/templates/manager/index.html
+++ b/orderio/templates/manager/index.html
@@ -6,7 +6,7 @@
 {% for message in messages %}
         <div class="alert alert-{{message.level_tag}}  alert-dismissible fade show">
             {{message}}
-            <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+            <small><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></small>
         </div>
 {% endfor %}
 
