--- a/orderio/templates/menu/weekly_menu.html
+++ b/orderio/templates/menu/weekly_menu.html
@@ -1,9 +1,9 @@
-{% extends "../base.html" %}
+{% extends "../manager-base.html" %}
 {% block content %}
 {% for message in messages %}
 <div class="alert alert-{{message.level_tag}}  alert-dismissible fade show">
   {{message}}
-  <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+  <small><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></small>
 </div>
 {% endfor %}
 {% for menu in menus %}
@@ -17,14 +17,14 @@
   {% if menu.approved %}
   <a href="#" class="btn btn-success btn-sm disabled"><i class="bi bi-check-circle"></i>Approved</a>
   {%else%}
-  <a href="{% url 'menu:update_menu' menu.pk %}" class="btn btn-warning">Update</a>
+  <a href="{% url 'menu:update_menu' menu.pk %}" class="btn btn-info">Update</a>
   <a href="{% url 'menu:delete_menu' menu.pk %}" class="btn btn-danger">Delete</a>
   {% if menu.meals.all.count > 0 %}
-  <a href="{% url 'menu:approve_menu' menu.pk %}">Approve</a>
+  <a href="{% url 'menu:approve_menu' menu.pk %}" class="btn btn-success">Approve</a>
   {% endif %}
   {% endif %}
 </ol>
 {% endfor %}
 
-<a href="{% url 'menu:create_menu' weekly_menu.pk %}" class="btn btn-danger">Create</a>
+<a href="{% url 'menu:create_menu' weekly_menu.pk %}" class="btn btn-primary">Create</a>
 {% endblock content %}
