--- a/orderio/templates/meal/all_meals.html
+++ b/orderio/templates/meal/all_meals.html
@@ -66,11 +66,11 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">You are about to deny an order!</h5>
+        <h5 class="modal-title" id="exampleModalLabel">You are about to delete a meal!</h5>
         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
       </div>
       <div class="modal-body">
-        Are you sure you want to deny this order?
+        Are you sure you want to <b class="text-danger">delete</b> this meal?
       </div>
       <div class="modal-footer">
         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
