--- a/orderio/templates/meal/view_meal.html
+++ b/orderio/templates/meal/view_meal.html
@@ -12,8 +12,8 @@
             <div class="card-body p-0">
                 <!-- Nested Row within Card Body -->
                 <div class="row">
-                    <div class="col-lg-3 d-none d-lg-block align-items-center">
-                        <img src="{{meal.meal_img.url}}" class="img-responsive img-responsive" width="100%">
+                    <div class="col-lg-3 d-none d-lg-block align-items-center my-auto">
+                        <img src="{{meal.meal_img.url}}" class="img-responsive img-responsive p-2" width="100%">
                     </div>
                     <div class="col-lg-9 border">
                         <div class="p-5">
