--- a/orderio/templates/manager-base.html
+++ b/orderio/templates/manager-base.html
@@ -31,7 +31,7 @@
     
 </head>
 
-<body id="page-top">
+<body id="page-top" >
 
     <!-- Page Wrapper -->
     <div id="wrapper">
@@ -152,7 +152,7 @@
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column bg-gray-200" >
 
             <!-- Main Content -->
             <div id="content">
@@ -353,7 +353,7 @@
                 <!-- End of Topbar -->
 
                 <!-- Begin Page Content -->
-                <div class="container-fluid">
+                <div class="container-fluid ">
                   {% block content %}
       
                   {% endblock %}
