--- a/orderio/templates/menu/create_menu.html
+++ b/orderio/templates/menu/create_menu.html
@@ -1,26 +1,20 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block content %}
-<div class="container">
-  <div class="px-4 py-5 my-5 text-center">
-    <h1 class="display-5 fw-bold">CREATE A MENU</h1>
-
-    <div class="col-lg-6 mx-auto">
-      <p class="lead mb-4">Search, add and remove meals from a meal</p>
-      <div class="d-grid gap-2 d-sm-flex justify-content-sm-center">
-
-      </div>
-    </div>
-  </div>
+<link href='{% static "plugins/datatables/dataTables.bootstrap4.min.css" %}' rel="stylesheet">
+<div class="container-fluid" >
+  <h1 class="h3 mb-2 text-gray-800">Create menu</h1>
+  <p class="mb-4">Add or remove meals from the menu. Click continue when you are done.</p>
   <!-- meal choosing -->
-  <div class="row">
-    <div class="col-lg-8">
-      <div class="table-responsive">
-        <div class="input-group m-1 d-flex justify-content-end">
-          <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
-          <input type="text" id="search" placeholder="Search for food.." class="form-control">
-        
-          <table class="table table-white table-hover" id="meal-table" >
+  <div class="row " >
+    
+
+    <div class="col-lg-7 col-md-7  card shadow mb-4">
+      <div class="card-header py-3">
+        <h6 class="m-0 font-weight-bold text-primary">Meal List</h6>
+      </div>
+      <div class="table-responsive" >
+          <table  class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
             <thead>
               <tr class="bg-dark text-white">
                 <th>Meal</th>
@@ -31,17 +25,17 @@
                 <th>Action</th>
               </tr>
             </thead>
-            <tbody id="meal-table-body">
+            <tbody>
               {% for meal in meals %}
                 <tr>
                   <td>{{meal.name}}</td>
                   <td>{{meal.calories}} </td>
                   <td>{{meal.price}} </td>
-                  <td>{{meal.description|truncatechars:150}}</td>
+                  <td>{{meal.description|truncatechars:50}}</td>
                   <td>{{meal.category.name}}</td>
                   <td>
                     {% if bag|length < 7 %}
-                    <button class="btn btn-success" id="add-btn{{meal.id}}" value="{{meal.id}}"
+                    <button class="btn btn-success " id="add-btn{{meal.id}}" value="{{meal.id}}"
                       data-url="{% url 'menu:update_session' %}">Add</button>
                     {% else %}
                     <button class="btn btn-success disabled">Add</button>
@@ -51,7 +45,7 @@
               {% endfor %}
             </tbody>
           </table>
-        </div>
+        
       </div>
     </div>
     <div class="col-md-5 col-lg-4 order-md-last">
@@ -119,9 +113,15 @@
 
 <!-- table filter js -->
 <script src="{% static 'js/table-filter.js' %}"></script>
+<!-- datatables -->
+<script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'plugins/datatables/dataTables.bootstrap4.min.js' %}"></script>
+<script src="{% static 'js/datatables.js' %}"></script>
 <!-- ajax js -->
 <script src="{% static 'js/create_menu.js' %}">
 </script>
+
+<!-- continue -->
 <script>
   $(document).on("click", "#show", function show () {
     $("#show").hide();
