--- a/orderio/templates/account/user_list.html
+++ b/orderio/templates/account/user_list.html
@@ -1,59 +1,74 @@
 {% extends "../manager-base.html" %}
 {% load static %}
 {% block content %}
-{% for message in messages %}
+<link href='{% static "plugins/datatables/dataTables.bootstrap4.min.css" %}' rel="stylesheet">
 
-<div class="alert alert-{{message.level_tag}} alert-dismissible fade show" role="alert">
-    {{message}}
-    <small><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></small>
-  </div>
-{% endfor %}
+<div class="container-fluid">
+    <div class="row justify-content-center">
+        <div class="col-lg-8 col-md-10">
+            {% for message in messages %}
+    <div class="alert alert-{{message.level_tag}} alert-dismissible fade show" role="alert">
+        {{message}}
+        <small><button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button></small>
+    </div>
+    {% endfor %}
+    <h1 class="h3 mb-2 text-gray-800">Create menu</h1>
+    <p class="mb-4">Add or remove meals from the menu. Click continue when you are done.</p>
 
-    <div class="input-group m-1 d-flex justify-content-end" style="width: 30%;">
-    <span class="input-group-text" id="addon-wrapping"><i class="bi bi-search"></i></span>
-    <input type="text" id="search" placeholder="Start typing to search.." class="form-control">
-  </div>
+
+
+    <div class="card shadow row">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Meal List</h6>
+        </div>
+        <div class="table-responsive mx-1 card-body">
+            <table class="table table-bordered" id="dataTable" width="100%" cellspacing="0">
+                <thead class="bg-dark text-white">
+                    <tr>
+                        <th>Username</th>
+                        <th>Role</th>
+                        <th>Daily Allowance</th>
+                        <th>Total Orders</th>
+                        <th>Action</th>
+                    </tr>
+                </thead>
+                <tbody>
+                    {% for user in users %}
+                    <tr>
+                        <td>{{user.username}}</td>
+                        <td>{{user.role}}</td>
+
+                        {% if user.role.name == "user" %}
+                        <td>
+                            <form method="post" action="{% url 'employee:change_daily_allowance' user.employee.pk %}">
+                                {% csrf_token %}
+                                <div class="row">
+                                    <div class="col-8"><input type="number" class="form-control" name="daily_allowance"
+                                            value="{{user.employee.daily_allowance}}"></div>
+                                    <div class="col-4"><input type="submit" value="save" class="btn btn-success"></div>
+                                </div>
+                            </form>
+                        </td>
+                        {% else %}
+                        <td>-</td>
+                        {% endif %}
+                        <td>{{user.employee.order_set.all.count}}</td>
+                        <td><a href="{% url 'delete_user' user.id %}">Delete</a> </td>
+                    </tr>
+                    {% endfor %}
 
 
 
-<table class="table table-striped">
-    <thead>
-        <tr>
-            <th>Username</th>
-            <th>Role</th>
-            <th>Daily Allowance</th>
-            <th>Total Orders</th>
-            <th>Action</th>
-        </tr>
-    </thead>
-    <tbody id="meal-table-body">
-        {% for user in users %}
-<tr>
-<td>{{user.username}}</td>
-<td>{{user.role}}</td>
+                </tbody>
+            </table>
+        </div>
+    </div>
+        </div>
+    </div>
 
-{% if user.role.name == "user" %}
-  <td><form method="post" action="{% url 'employee:change_daily_allowance' user.employee.pk %}">
-      {% csrf_token %}
-      <div class="row">
-          <div class="col-8"><input type="number" class="form-control" name="daily_allowance" value="{{user.employee.daily_allowance}}"></div>
-          <div class="col-4"><input type="submit" value="save" class="btn btn-success"></div>
-      </div>
-      
-      
-  </form>
-</td>
-{% else %}
-<td>-</td>
-{% endif %}
-<td>{{user.employee.order_set.all.count}}</td>
-<td><a href="{% url 'delete_user' user.id %}">Delete</a> </td>
-</tr>
-{% endfor %}
-
-  
-
-    </tbody>
-</table>
-<script src="{% static 'js/table-filter.js' %}"></script>
+</div>
+<!-- datatables -->
+<script src="{% static 'plugins/datatables/jquery.dataTables.min.js' %}"></script>
+<script src="{% static 'plugins/datatables/dataTables.bootstrap4.min.js' %}"></script>
+<script src="{% static 'js/datatables.js' %}"></script>
 {% endblock content %}
