--- a/orderio/templates/user-base.html
+++ b/orderio/templates/user-base.html
@@ -106,7 +106,7 @@
         <!-- End of Sidebar -->
 
         <!-- Content Wrapper -->
-        <div id="content-wrapper" class="d-flex flex-column">
+        <div id="content-wrapper" class="d-flex flex-column bg-gray-200">
 
             <!-- Main Content -->
             <div id="content">
